[package]
name = "libphantomfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake-enum = "0.1.4"
bitflags = "1.3.2"
bytemuck = {version="1.12.1",features=["derive","min_const_generics","zeroable_maybe_uninit"]}
crc = "3.0.0"

[features]
std = ["bytemuck/extern_crate_alloc","bytemuck/extern_crate_std"]